[tool.poetry]
name = "live-reddit"
version = "0.1.0"
description = ""
authors = ["Sam Siggs <sam.siggs@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.1"
numpy = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
